--- a/plugin-recordControls/package.json
+++ b/plugin-recordControls/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plugin-daytime",
+  "name": "plugin-recordControls",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -7,9 +7,10 @@
     "start": "twilio flex:plugins:start"
   },
   "dependencies": {
-    "flex-plugin-scripts": "^4.3.0",
-    "react": "16.5.2",
-    "react-dom": "16.5.2"
+    "flex-plugin-scripts": "4.3.1",
+    "react": "^16.5.2",
+    "react-dom": "16.5.2",
+    "react-emotion": "9.2.12"
   },
   "devDependencies": {
     "@twilio/flex-ui": "^1",
