needed to obsucre the config json until I can get it to be properly ignored.

--- a/plugin-interface/package.json
+++ b/plugin-interface/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "dotenv": "^16.0.0",
     "flex-plugin-scripts": "4.2.2",
     "qs": "^6.10.2",
     "react": "^16.13.1",
