--- a/plugin-recordControls/package.json
+++ b/plugin-recordControls/package.json
@@ -7,12 +7,12 @@
     "start": "twilio flex:plugins:start"
   },
   "dependencies": {
-    "flex-plugin-scripts": "4.3.1",
     "react": "16.5.2",
     "react-dom": "16.5.2",
-    "react-emotion": "9.2.12",
     "redux": "^3.7.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "@twilio/flex-plugin-scripts": "5.0.4",
+    "react-emotion": "9.2.12"
   },
   "devDependencies": {
     "@twilio/flex-ui": "^1",
