--- a/plugin-customchat/package.json
+++ b/plugin-customchat/package.json
@@ -7,14 +7,14 @@
     "start": "twilio flex:plugins:start"
   },
   "dependencies": {
-    "flex-plugin-scripts": "4.3.1",
     "react": "^16.13.1",
-    "react-dom": "16.13.1",
-    "react-emotion": "9.2.12",
-    "redux": "^3.7.2"
+    "react-dom": "^16.13.1",
+    "redux": "^3.7.2",
+    "@twilio/flex-plugin-scripts": "5.0.5",
+    "react-emotion": "9.2.12"
   },
   "devDependencies": {
     "@twilio/flex-ui": "^1",
-    "react-test-renderer": "16.5.2"
+    "react-test-renderer": "^16.13.1"
   }
 }
